# NSU_OOP

./: CMakeLists.txt  bitarr.cpp  bitarr.hpp  main.cpp  tests.cpp
bitarr/: CMakeLists.txt  bitarr.cpp  main.cpp  tests.cpp
bitarr_dir/: CMakeLists.txt  bitarr.cpp  bitarr.hpp
num_sys/: CMakeLists.txt  bigint.cpp  bigint.hpp  filehandler.cpp  filehandler.hpp  input.txt  input_invalid_base.txt  input_invalid_base1.txt  input_invalid_base2.txt  input_invalid_base3.txt  main.cpp  maths.cpp  maths.hpp  output.txt  tests.cpp
tests/: CMakeLists.txt  bitarrTests.cpp
